# he-path-of-the-samurai

./: docker-compose.yml
db/: init.sql
services/js-legacy/: Dockerfile  cron_job.sh  entrypoint.sh  index.js  package-lock.json  package.json
services/php-web/: Dockerfile  entrypoint.sh  nginx.conf
services/php-web/app/Contracts/: AstronomyClientInterface.php
services/php-web/app/Jobs/: UpdateAstronomyCacheJob.php
services/php-web/app/Providers/: ExternalApiServiceProvider.php
services/php-web/app/Services/: AstronomyDataService.php  JwstService.php  OsdrService.php  RedisAstronomyCache.php
services/php-web/app/Support/: JwstHelper.php
services/php-web/bootstrap/: app.php
services/php-web/config/: services.php
services/php-web/database/migrations/: 2025_11_03_193635_dummy_training_marker.php
services/php-web/resources/views/: dashboard.blade.php  iss.blade.php  osdr.blade.php  page.blade.php
services/php-web/routes/: web.php
services/rust-iss/: Cargo.toml
services/rust-iss/src/: main.rs
services/rust-iss/src/clients/: cache.rs  iss.rs  mod.rs  nasa.rs  osdr.rs  spacex.rs
services/rust-iss/src/config/: mod.rs
services/rust-iss/src/domain/: error.rs  mod.rs  models.rs  utils.rs  validation.rs
services/rust-iss/src/handlers/: health.rs  iss.rs  mod.rs  osdr.rs  space.rs
services/rust-iss/src/repo/: cache_repo.rs  db.rs  iss_repo.rs  mod.rs  osdr_repo.rs
services/rust-iss/src/routes/: mod.rs
services/rust-iss/src/services/: iss_service.rs  job_service.rs  mod.rs  osdr_service.rs  space_service.rs
(+20 files in other folders)
