
[package]
name = "rust_iss"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono"] }
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
redis = { version = "0.23.3", features = ["tokio-comp", "serde"] }
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
serde_valid = "0.15.0"
serde_valid_derive = "0.15.0"
uuid = { version = "1", features = ["v4"] }
tower_governor = { version = "0.5", features = ["axum"] }
governor = "0.5"

